@@ -1,4 +1,4 @@
-$Id: History,v 1.52 2002-12-16 16:37:25 maire Exp $
+$Id: History,v 1.53 2002-12-18 15:17:55 maire Exp $
 --------------------------------------------------
 
      =========================================================
@@ -14,6 +14,10 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+     
+18-12-02 mma (exampleN03-V05-00-01)
+- code for smooth trajectory put in DetectorContruction::SetMagField()
+  and TrackingAction::PreUserTrackingAction()
      
 16-12-02 mma (exampleN03-V05-00-00)
 - UI directory /N03/
